--- a/BookStore_NTierProject/BookStore_NTierProject.Utility/BookStore_NTierProject.Utility.csproj
+++ b/BookStore_NTierProject/BookStore_NTierProject.Utility/BookStore_NTierProject.Utility.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BookStore_NTierProject.Utility</RootNamespace>
     <AssemblyName>BookStore_NTierProject.Utility</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
