--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Web.config
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Web.config
@@ -23,6 +23,10 @@
       </system.Web>
   -->
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login/Login" slidingExpiration="true" timeout="2880"></forms>
+    </authentication>
+    
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
